--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.0",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~52.0.0",
+    "expo-status-bar": "~1.11.0",
     "react": "18.2.0",
-    "react-native": "0.72.0"
+    "react-native": "0.73.2",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
